// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simulateLap (characterization) > produces a stable final classification, including retirements, for a seeded race 1`] = `
[
  {
    "condition": 1,
    "driverId": "d4",
    "gap": 0,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 1,
    "position": 1,
    "retired": false,
    "retirementLap": null,
    "stints": 1,
    "totalTime": 1255.38,
    "tyre": "medium",
  },
  {
    "condition": 84,
    "driverId": "d3",
    "gap": 17.747,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 2,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1273.127,
    "tyre": "medium",
  },
  {
    "condition": 13,
    "driverId": "d5",
    "gap": 3.749,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 3,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1276.876,
    "tyre": "soft",
  },
  {
    "condition": 26,
    "driverId": "d6",
    "gap": 10.365,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 4,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1287.241,
    "tyre": "soft",
  },
  {
    "condition": 77,
    "driverId": "d1",
    "gap": 0,
    "laps": 1,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 5,
    "retired": true,
    "retirementLap": 2,
    "stints": 0,
    "totalTime": 100.256,
    "tyre": "medium",
  },
  {
    "condition": 100,
    "driverId": "d2",
    "gap": 0,
    "laps": 0,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 6,
    "retired": true,
    "retirementLap": 1,
    "stints": 0,
    "totalTime": 0.5,
    "tyre": "medium",
  },
]
`;

exports[`simulateLap (characterization) > records a god-mode forced retirement and classifies the car out of the running 1`] = `
[
  {
    "condition": 86,
    "driverId": "d4",
    "gap": 0,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 1,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1271.399,
    "tyre": "medium",
  },
  {
    "condition": 59,
    "driverId": "d5",
    "gap": 8.477,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 2,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1279.875,
    "tyre": "medium",
  },
  {
    "condition": 3,
    "driverId": "d6",
    "gap": 6.508,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 3,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1286.383,
    "tyre": "soft",
  },
  {
    "condition": 16,
    "driverId": "d3",
    "gap": 0,
    "laps": 4,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 4,
    "retired": true,
    "retirementLap": 5,
    "stints": 0,
    "totalTime": 408.832,
    "tyre": "medium",
  },
  {
    "condition": 77,
    "driverId": "d1",
    "gap": 0,
    "laps": 1,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 5,
    "retired": true,
    "retirementLap": 2,
    "stints": 0,
    "totalTime": 100.256,
    "tyre": "medium",
  },
  {
    "condition": 100,
    "driverId": "d2",
    "gap": 0,
    "laps": 0,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 6,
    "retired": true,
    "retirementLap": 1,
    "stints": 0,
    "totalTime": 0.5,
    "tyre": "medium",
  },
]
`;
